Cycles Rendered Viewport + Reload Scripts = Crash #52801

Closed
opened 2017-09-17 19:07:30 +02:00 by Jesse Sutherland · 6 comments

System Information
Linux x64, Window 7 x64
Multiple Machines, Various Hardware

Blender Version
Broken: 2.79 Release, 2.79 6798a06 (Sun Sep 17 02:55:54 2017)
Worked: 2.78c Release

Short description of error
If a viewport is set to rendered mode with cycles and the reload scripts operator is called, a crash occurs.

Linux Console shows:
Segmentation Fault

Windows console shows:
Error: EXCEPTION_ACCESS_VIOLATION

Exact steps for others to reproduce the error
Set viewport mode to "Rendered" with cycles. Press F8.

**System Information** Linux x64, Window 7 x64 Multiple Machines, Various Hardware **Blender Version** Broken: 2.79 Release, 2.79 6798a06 (Sun Sep 17 02:55:54 2017) Worked: 2.78c Release **Short description of error** If a viewport is set to rendered mode with cycles and the reload scripts operator is called, a crash occurs. Linux Console shows: `Segmentation Fault` Windows console shows: `Error: EXCEPTION_ACCESS_VIOLATION` **Exact steps for others to reproduce the error** Set viewport mode to "Rendered" with cycles. Press F8.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SynaGl0w

Added subscriber: @SynaGl0w

#53248 was marked as duplicate of this issue

#53248 was marked as duplicate of this issue

This issue was referenced by 6bf3dfbcdb

This issue was referenced by 6bf3dfbcdb93f4cf0dab78c82653432cd4ab6010
Brecht Van Lommel self-assigned this 2017-09-18 03:48:55 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @vitorbalbio-3

Added subscriber: @vitorbalbio-3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52801
No description provided.