Fix T52801: reload scripts causes Cycles viewport render crash.